# mathematical-algorithms-cpp

./: .gitignore  CMakeLists.txt  LICENSE
src/: karatsuba.cpp  main.cpp  multivar.cpp  pseudorandom.cpp  types.cpp  types.hpp
